WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
317824
[macOS] Scroll pocket color may be lost in fullscreen after refresh
https://bugs.webkit.org/show_bug.cgi?id=317824
Summary
[macOS] Scroll pocket color may be lost in fullscreen after refresh
Lily Spiniolas
Reported
2026-06-24 23:40:55 PDT
rdar://179516708
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-06-24 23:55:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/67849
EWS
Comment 2
2026-06-30 07:24:18 PDT
Committed
316145@main
(5c93ade672f8): <
https://commits.webkit.org/316145@main
> Reviewed commits have been landed. Closing PR #67849 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug